# atm-simulator

./: .env.example  .gitignore  .gitleaks.toml  .trivyignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  deploy.yml
admin/: index.html  package-lock.json  package.json  vite.config.ts
admin/coverage/: lcov.info
admin/coverage/lcov-report/: index.html
admin/src/: App.tsx  main.tsx
admin/src/api/: client.ts  endpoints.ts  types.ts
admin/src/hooks/: useAuth.ts  useNotification.ts  usePolling.ts
admin/src/styles/: global.css
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_phase2_models.py  0003_widen_audit_session_id.py  0004_admin_crud_audit_types.py  0005_add_account_limit_overrides.py
docs/: FINAL_REPORT.md  api.md  architecture.md  deployment.md  frontend-architecture.md  test-report-v1.0.md  user-guide.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  endpoints.ts  types.ts
frontend/src/hooks/: useATMContext.ts  useIdleTimer.ts
frontend/src/state/: ATMContext.tsx  atmReducer.ts  context.ts  types.ts
frontend/src/styles/: global.css  screen.css
frontend/src/utils/: motion.ts
scripts/: deploy.sh  generate_sample_statement.py  seed_db.py  smoke_test.sh
src/atm/: __init__.py  config.py  logging.py  main.py  worker.py
src/atm/api/: __init__.py  accounts.py  admin.py  auth.py  health.py  statements.py  transactions.py
src/atm/db/: __init__.py  seed.py  session.py
src/atm/middleware/: correlation.py  maintenance.py  rate_limit.py  request_logging.py
src/atm/models/: __init__.py  account.py  admin.py  audit.py  card.py  cassette.py  customer.py  transaction.py
src/atm/pdf/: __init__.py  statement_generator.py
src/atm/schemas/: __init__.py  account.py  admin.py  auth.py  transaction.py
src/atm/services/: __init__.py  account_service.py  admin_service.py  audit_service.py  auth_service.py  cassette_service.py  (+4 more)
tests/: COVERAGE_EXCLUSIONS.md  conftest.py  factories.py
tests/e2e/: __init__.py  conftest.py  test_atm_workflows.py  test_auth_journeys.py  test_balance_journeys.py  test_compound_journeys.py  test_deposit_journeys.py  test_error_journeys.py  test_statement_journeys.py  test_transfer_journeys.py  test_withdrawal_journeys.py
tests/integration/: test_admin_api.py  test_auth_api.py  test_balance_api.py  test_cassette_withdrawal_api.py  test_deposit_api.py  test_health_api.py  test_pin_management_api.py  test_session_redis.py  test_statement_api.py  test_transfer_api.py  test_withdrawal_api.py
tests/load/: README.md  locustfile.py
(+209 files in other folders)
